# fi_utils_project

./: .gitignore  README.md  pyproject.toml
doc/: calc_ytm_returns_complext_number.md
experiments/: calc_ytm_debugging.py
fi_utils/: abor_utils.py  bond_valuation.py
test/: test_amortization.py  test_bond_valuation.py
