[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fi-utils-project"
version = "0.1.0"
description = "Fixed Income Analytics calculation utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tools.setuptools.package.find]
where=["."]
exclude=["experiments*","test*"]